--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       </ul>
     </div>
   </div>
+  <div class="hero">
+    <div class="hero-text">
+      <div class="hero-main-text">This Website is Awesome</div>
+      <div class="hero-sub-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, delectus cupiditate. Qui sapiente architecto
+        praesentium eos sit eligendi commodi ab repellat exercitationem modi, magnam velit rem temporibus, dolor, saepe
+        assumenda?
+      </div>
+      <button>Sign up</button>
+    </div>
+    <div class="hero-image">This is an image, trust</div>
+  </div>
 </body>
 
 </html>
