--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="header">
-    <div class="logo">Header Logo</div>
-    <div class="links">
+    <div class="header-logo">Header Logo</div>
+    <div class="header-links">
       <ul>
         <li><a href="#">header link one</a></li>
         <li><a href="#">header link two</a></li>
