Add hero styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <div class="hero-text">
       <div class="hero-main-text">This Website is Awesome</div>
       <div class="hero-sub-text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, delectus cupiditate. Qui sapiente architecto
-        praesentium eos sit eligendi commodi ab repellat exercitationem modi, magnam velit rem temporibus, dolor, saepe
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, delectus cupiditate, magnam velit rem temporibus, dolor, saepe
         assumenda?
       </div>
       <button>Sign up</button>
