Add info section html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
     </div>
     <div class="hero-image">This is an image, trust</div>
   </div>
+  <div class="info">
+    <div class="info-title">Some random information.</div>
+    <div class="info-card-container">
+      <div class="info-card">
+        <div class="card-image"></div>
+        <div class="card-text">this is some subtext under an image</div>
+      </div>
+      <div class="info-card">
+        <div class="card-image"></div>
+        <div class="card-text">this is some subtext under an image</div>
+      </div>
+      <div class="info-card">
+        <div class="card-image"></div>
+        <div class="card-text">this is some subtext under an image</div>
+      </div>
+      <div class="info-card">
+        <div class="card-image"></div>
+        <div class="card-text">this is some subtext under an image</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
