--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="hero-text">
       <div class="hero-main-text">This Website is Awesome</div>
       <div class="hero-sub-text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, delectus cupiditate, magnam velit rem temporibus, dolor, saepe
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, delectus cupiditate, magnam velit rem
+        temporibus, dolor, saepe
         assumenda?
       </div>
       <button>Sign up</button>
@@ -49,6 +50,15 @@
         <div class="card-image"></div>
         <div class="card-text">this is some subtext under an image</div>
       </div>
+    </div>
+  </div>
+  <div class="message">
+    <div class="message-quote">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo ad numquam omnis sed repellendus accusantium facere
+      eos asperiores animi at optio rerum eum corrupti natus eaque, nobis fugiat libero. Totam?
+    </div>
+    <div class="message-name">
+      -Sir. Ipsum
     </div>
   </div>
 </body>
