--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
       -Sir. Ipsum
     </div>
   </div>
+  <div class="action-call">
+    <div class="action-call-text">
+      <div class="action-call-main-text">Call to action! It's time!</div>
+      <div class="action-call-sub-text">
+        Sign up for our product that won't ever exist using the shiny button right there!
+      </div>
+    </div>
+    <button>Sign up</button>
+  </div>
 </body>
 
 </html>
